# mabc

./: README.md  pyproject.toml
mabc/src/: dst_solver.py  rg_solver.py
notebooks/: lowerbound.ipynb  lqr.ipynb  lqr_final.ipynb  resource_gathering_final.ipynb  sea_treasure.ipynb  sea_treasure_final.ipynb  y_maze_final.ipynb
scripts/: solve_dst.py  visualize_dst_polytope.py  visualize_treasure.py
