[tool.poetry]
name = "mabc"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.12,<3.14.1 || >3.14.1,<3.15"
numpy = "^2.4.0"
matplotlib = "^3.10.8"
networkx = {extras = ["default"], version = "^3.6.1"}
scikit-learn = "^1.8.0"
mo-gymnasium = "^1.3.2"
tqdm = "^4.67.3"
plotly = "^6.6.0"
nbformat = "^5.10.4"
torch = "^2.11.0"
stable-baselines3 = "^2.8.0"
gymnasium = {extras = ["box2d"], version = "^1.2.3"}
tensorboard = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
